<resources>
    <string name="app_name">Everyday expenses</string>
    <string name="fragment_chooser">New transaction</string>
    <string name="fragment_category">Category list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_name">Rudolf</string>
    <string name="header_email">rudihoffer@gmail.com</string>
    <string name="cost_element">Costs</string>
    <string name="nav_open">Open navigation</string>
    <string name="nav_close">Close navigation</string>
    <string name="nav_statistic">Statistic</string>
    <string name="cost_sum">0.00</string>
    <string name="cost_category">Select category</string>
    <string name="cost_title">Insert title</string>
    <string name="cost_tags">Add tags</string>
    <string name="cost_date">Add date</string>
    <string name="cost_note">Insert note</string>
    <string name="cost_expense">Expense</string>
    <string name="cost_income">Income</string>
    <string name="cost_button">OK</string>
    <string name="choose_uncategorized">Uncategorized</string>
    <string name="choose_food">Food</string>
    <string name="choose_entertainment">Entertainment</string>
    <string name="choose_car">Car</string>
    <string name="choose_home">Home</string>
    <string name="choose_clothing">Clothing</string>
    <string name="choose_electronics">Electronics</string>
    <string name="choose_health">Health and beaty</string>
    <string name="choose_children">Children</string>
    <string name="choose_work">Work</string>
    <string name="ct_name">No text</string>
    <string name="ct_word">No word</string>
    <string name="dialog_text">Choose date</string>
    <string name="dialog_title_enter">Enter title</string>
    <string name="dialog_title">Enter your title</string>
    <string name="dialog_btn">OK</string>
    <string name="home">Home</string>
    <string name="expenses">Expenses</string>
</resources>
