<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.CostsChooserFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_choose_fragment"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edit_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:inputType="number"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cost_sum"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_format_align_left" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_edit" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_local_offer" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_event_available" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_event_note" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_category"
                android:id="@+id/cost_category"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:gravity="end"/>

            <View
                android:id="@+id/divider1"
                android:layout_width="250dp"
                android:layout_gravity="end"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_title"
                android:id="@+id/cost_title"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:gravity="end"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="250dp"
                android:layout_gravity="end"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_tags"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:gravity="end"/>

            <View
                android:id="@+id/divider3"
                android:layout_width="250dp"
                android:layout_gravity="end"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_date"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:id="@+id/cost_date"
                android:gravity="end"/>

            <View
                android:id="@+id/divider4"
                android:layout_width="250dp"
                android:layout_gravity="end"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_note"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:gravity="end"/>

            <View
                android:id="@+id/divider5"
                android:layout_width="250dp"
                android:layout_gravity="end"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:text="@string/cost_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="end"
        android:textColor="@color/white"
        />

</LinearLayout>